--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
@@ -65,7 +65,7 @@
                         </div>
 
                         <div class="col-md-2 col-sm-3 col-xs-3 pull-right">
-                            @*<img src="~/Content/list.png" alt="List-icon">*@
+                            <img src="~/Content/clear.png" alt="Clear" class="item-icons" ng-click="deleteList(list)">
                         </div>
                     </li>
                 </ul>
@@ -111,12 +111,13 @@
                 <ul>
                     <li ng-repeat="todo in (toDoItems | filter : {IsCompleted: 'false'})" ng-dblClick="showDescription(todo)" class="item">
                         <div class="col-md-10 col-sm-9 col-xs-9 pull-left">
-                            <input type="checkbox" ng-click="toggleCompleted(todo.Id)" >
+                            <input type="checkbox" ng-click="toggleCompleted(todo)" >
                             <span class="done-{{todo.IsCompleted}} item-text">{{todo.Text}}</span>
                         </div>
 
                         <div class="col-md-2 col-sm-3 col-xs-3 pull-right">
                             <div class="pull-right">
+                                <img src="~/Content/clear.png" alt="Clear" class="item-icons" ng-click="deleteItem(todo)">
                                 <img src="~/Content/star-border-black.png" alt="Star" class="item-icons">
                             </div>
                         </div>
@@ -129,12 +130,13 @@
                         <ul>
                             <li ng-repeat="todo in toDoItems | filter: {IsCompleted: 'true'}" ng-dblClick="showDescription(todo)" class="item-done">
                                 <div class="col-md-10 col-sm-9 col-xs-9 pull-left">
-                                    <img src="~/Content/check.png" alt="Check" class="item-icons" ng-click="toggleCompleted(todo.Id)">
+                                    <img src="~/Content/check.png" alt="Check" class="item-icons" ng-click="toggleCompleted(todo)">
                                     <span class="done-{{todo.IsCompleted}} item-text">{{todo.Text}}</span>
                                 </div>
 
                                 <div class="col-md-2 col-sm-3 col-xs-3 pull-right">
                                     <div class="pull-right">
+                                        <img src="~/Content/clear.png" alt="Clear" class="item-icons" ng-click="deleteItem(todo)">
                                         <img src="~/Content/star-border-black.png" alt="Star" class="item-icons">
                                     </div>
                                 </div>
